modify tooltip, button and menu text

--- a/examples/wanui_res/wanui_res.rc
+++ b/examples/wanui_res/wanui_res.rc
@@ -465,43 +465,43 @@ BEGIN
     IDS_ACCNAME_RESTORE         "恢复"
     IDS_ACCNAME_CLOSE           "关闭"
 
-    IDS_TOOLTIP_NEW             "new a session"
+    IDS_TOOLTIP_NEW             "New Session"
     IDS_ACCNAME_NEW            "new_session"
-	IDS_TOOLTIP_DUP             "duplicate the session"
+	IDS_TOOLTIP_DUP             "Duplicate Session"
     IDS_ACCNAME_DUP            "duplicate_session"
-    IDS_TOOLTIP_RELOAD         "reload the session"
+    IDS_TOOLTIP_RELOAD         "Reload Session"
     IDS_ACCNAME_RELOAD         "reload_session"
-    IDS_TOOLTIP_PASTE            "paste(Shift+Insert)"
+    IDS_TOOLTIP_PASTE            "Paste"
     IDS_ACCNAME_PASTE           "paste"
-    IDS_TOOLTIP_COPY_ALL        "copy all"
+    IDS_TOOLTIP_COPY_ALL        "Copy All"
     IDS_ACCNAME_COPY_ALL        "copy_all"
-    IDS_TOOLTIP_CLEAR           "clear scroll bar"
+    IDS_TOOLTIP_CLEAR           "Clear Scrollback"
     IDS_ACCNAME_CLEAR           "clear_scroll_bar"
-    IDS_TOOLTIP_LOG_ENABLER            "start/stop logging.\nconfigurable in session setting(Session->Logging)\nsaved to Destop by default"
+    IDS_TOOLTIP_LOG_ENABLER            "Enable / Disable Logging"
     IDS_ACCNAME_LOG_ENABLER            "start_stop_logging"
-	IDS_TOOLTIP_CMD_DLG            "show command editor dialog."
+	IDS_TOOLTIP_CMD_DLG            "Show Command Dialog."
 	IDS_ACCNAME_CMD_DLG           "show_command_dialog"
-    IDS_TOOLTIP_SHORTCUT_ENABLER            "shortcuts enabler."
+    IDS_TOOLTIP_SHORTCUT_ENABLER            "Enable / Disable Shortcuts"
     IDS_ACCNAME_SHORTCUT_ENABLER           "shortcuts_enabler"
-	IDS_TOOLTIP_SCROLL_END                 "if keep scrolling to the end. \nException: \nWhen it is disabled and the max save lines are reached, \nit is still scrolling because the oldest line you are watching is flushing away.\n You can enlarge the max save lines as a workaround."
+	IDS_TOOLTIP_SCROLL_END                 "Enable / Disable Keeping Scrolling to the End"
 	IDS_ACCNAME_SCROLL_END                 "scroll_to_the_end_enabler"
-    IDS_TOOLTIP_SESSION_SETTING            "session settings"
+    IDS_TOOLTIP_SESSION_SETTING            "Session Settings"
     IDS_ACCNAME_SESSION_SETTING           "session_settings"
-    IDS_TOOLTIP_ABOUT                    "about"
-    IDS_TOOLTIP_FIND_NEXT                "find next"
-    IDS_TOOLTIP_FIND_PREVIOUS            "find previous"
-    IDS_TOOLTIP_FIND_RESET               "reset finding status\n when the output is changed\n and the pos is unmatched."
+    IDS_TOOLTIP_ABOUT                    "About"
+    IDS_TOOLTIP_FIND_NEXT                "Find Next"
+    IDS_TOOLTIP_FIND_PREVIOUS            "Find Previous"
+    IDS_TOOLTIP_FIND_RESET               "Reset Finding statuss"
     IDS_ACCNAME_ABOUT                    "about"
     IDS_ACCNAME_FIND_NEXT                "find_next"
     IDS_ACCNAME_FIND_PREVIOUS            "find_previous"
     IDS_ACCNAME_FIND_RESET               "reset_find"
-    IDS_TOOLTIP_CMD_SCATTER              "share input"
+    IDS_TOOLTIP_CMD_SCATTER              "Share Input"
     IDS_ACCNAME_CMD_SCATTER              "share_input"
 
-    IDS_TOOLTIP_LOCATION_ICON   "web info"
+    IDS_TOOLTIP_LOCATION_ICON   "Web Info"
     IDS_RESTORE_TAB             "重新打开关闭的标签页(&E)"
     IDS_ACCNAME_NEWTAB          "新标签页"
-    IDS_TOOLTIP_CLOSE_TAB       "close"
+    IDS_TOOLTIP_CLOSE_TAB       "Close"
     IDS_DEFAULT_TAB_TITLE       "无标题"
     IDS_SYNC_BOOKMARK_BAR_ERROR "同步错误"
     IDS_SYNC_BOOKMARK_BAR_ERROR_DESC "您的帐户登录详细信息已过期。请点击此按钮重新输入您的密码。"
