--- a/examples/chrome/chrome.vcxproj
+++ b/examples/chrome/chrome.vcxproj
@@ -68,7 +68,7 @@
       <DisableSpecificWarnings>4244;4267;4355;4996;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>Secur32.lib;LIBCMTD.lib;comctl32.lib;msimg32.lib;lib_base-vc90-mt-sd.lib;lib_skia-vc90-mt-sd.lib;lib_ui_gfx-vc90-mt-sd.lib;lib_ui_base-vc90-mt-sd.lib;lib_view-vc90-mt-sd.lib;lib_status_tray-vc90-mt-sd.lib;lib_bubble-vc90-mt-sd.lib;putty.lib;putty_view.lib;fsm.lib;Imm32.lib;ws2_32.lib;wldap32.lib;advapi32.lib;Normaliz.lib;winhttp.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Secur32.lib;LIBCMTD.lib;comctl32.lib;msimg32.lib;lib_base-vc90-mt-sd.lib;lib_skia-vc90-mt-sd.lib;lib_ui_gfx-vc90-mt-sd.lib;lib_ui_base-vc90-mt-sd.lib;lib_view-vc90-mt-sd.lib;lib_bubble-vc90-mt-sd.lib;putty.lib;putty_view.lib;fsm.lib;Imm32.lib;ws2_32.lib;wldap32.lib;advapi32.lib;Normaliz.lib;winhttp.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>../../bin/chrome-d.exe</OutputFile>
       <AdditionalLibraryDirectories>../../lib;../../putty/windows;../wanui_res;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <DelayLoadDLLs>dwmapi.dll;%(DelayLoadDLLs)</DelayLoadDLLs>
@@ -96,7 +96,7 @@
       <DisableSpecificWarnings>4244;4267;4355;4996;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>MSVCRT.lib;Secur32.lib;comctl32.lib;msimg32.lib;lib_base-vc90-mt-s.lib;lib_skia-vc90-mt-s.lib;lib_ui_gfx-vc90-mt-s.lib;lib_ui_base-vc90-mt-s.lib;lib_view-vc90-mt-s.lib;lib_status_tray-vc90-mt-s.lib;lib_bubble-vc90-mt-s.lib;putty_r.lib;putty_view_r.lib;fsm_r.lib;Imm32.lib;ws2_32.lib;wldap32.lib;advapi32.lib;Normaliz.lib;winhttp.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>MSVCRT.lib;Secur32.lib;comctl32.lib;msimg32.lib;lib_base-vc90-mt-s.lib;lib_skia-vc90-mt-s.lib;lib_ui_gfx-vc90-mt-s.lib;lib_ui_base-vc90-mt-s.lib;lib_view-vc90-mt-s.lib;lib_bubble-vc90-mt-s.lib;putty_r.lib;putty_view_r.lib;fsm_r.lib;Imm32.lib;ws2_32.lib;wldap32.lib;advapi32.lib;Normaliz.lib;winhttp.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>../../bin/chrome.exe</OutputFile>
       <AdditionalLibraryDirectories>../../lib;../../putty/windows;../wanui_res;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <DelayLoadDLLs>dwmapi.dll;%(DelayLoadDLLs)</DelayLoadDLLs>
@@ -304,9 +304,6 @@
     </ProjectReference>
     <ProjectReference Include="..\bubble\bubble.vcxproj">
       <Project>{6e501d02-9396-4b35-970c-9144ad7404fc}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\status_tray\status_tray.vcxproj">
-      <Project>{e6255df6-0c35-4f2e-a240-8022073520ca}</Project>
     </ProjectReference>
     <ProjectReference Include="..\wanui_res\wanui_res.vcxproj">
       <Project>{79407184-d31f-4d79-af0b-32c7a6e71747}</Project>
