zmodem supports sending multiple files

--- a/putty_view/putty_view.vcxproj
+++ b/putty_view/putty_view.vcxproj
@@ -88,6 +88,7 @@
     <ClInclude Include="native_putty_controller.h" />
     <ClInclude Include="native_putty_page.h" />
     <ClInclude Include="PuttyFileDialog.h" />
+    <ClInclude Include="PuttyMultiFileDialog.h" />
     <ClInclude Include="putty_callback.h" />
     <ClInclude Include="putty_global_config.h" />
     <ClInclude Include="putty_timer.h" />
@@ -103,6 +104,7 @@
     <ClCompile Include="native_putty_controller.cpp" />
     <ClCompile Include="native_putty_page.cpp" />
     <ClCompile Include="PuttyFileDialog.cpp" />
+    <ClCompile Include="PuttyMultiFileDialog.cpp" />
     <ClCompile Include="putty_callback.cpp" />
     <ClCompile Include="putty_view.cpp" />
     <ClCompile Include="readlnk.cpp" />
