--- a/putty_view/putty_view.vcxproj.filters
+++ b/putty_view/putty_view.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="RulesTable.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PuttyMultiFileDialog.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="putty_view.cpp">
@@ -90,6 +93,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="window_interface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PuttyMultiFileDialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
