--- a/putty/putty.vcxproj.filters
+++ b/putty/putty.vcxproj.filters
@@ -410,6 +410,9 @@
     <ClInclude Include="windows\winsecur.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="version.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="windows\putty.rc">
