--- a/putty_view/putty_view.vcxproj
+++ b/putty_view/putty_view.vcxproj
@@ -87,7 +87,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>.;../putty-ng;../library/ui_gfx;../library;../library/third_party/skia/include/core;../library/third_party/skia/include/config;../library/third_party/skia/include/effects;../library/third_party/skia/include/ports;../library/third_party/skia/include/utils;../library/third_party/skia/src/core;../putty/charset;../putty/windows;../putty/;../vendor/boost;../vendor/framework-nd/DesignPattern/include;../vendor/framework-nd/Fsm/include;../vendor/framework-nd/Log/include;../vendor/framework-nd/Net/include;../vendor/framework-nd/Utility/include;../vendor/framework-nd;..\vendor\libevent\WIN32-Code\nmake;../vendor/libevent/include;../vendor/dirent/include;../vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;../putty-ng;../library/ui_gfx;../library;../library/third_party/skia/include/core;../library/third_party/skia/include/config;../library/third_party/skia/include/effects;../library/third_party/skia/include/ports;../library/third_party/skia/include/utils;../library/third_party/skia/src/core;../putty/charset;../putty/windows;../putty/extend;../putty/;../vendor/boost;../vendor/framework-nd/DesignPattern/include;../vendor/framework-nd/Fsm/include;../vendor/framework-nd/Log/include;../vendor/framework-nd/Net/include;../vendor/framework-nd/Utility/include;../vendor/framework-nd;..\vendor\libevent\WIN32-Code\nmake;../vendor/libevent/include;../vendor/dirent/include;../vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;WINVER=0x0600;_WIN32_WINNT=0x0600;NOMINMAX;SECURITY_WIN32;_CRT_SECURE_NO_WARNINGS;WIN32_LEAN_AND_MEAN;WINNT;DEBUG;WIN32S_COMPAT;PSWD="n0o614";_NO_OLDNAMES;NO_MULTIMON;NO_HTMLHELP;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -105,7 +105,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>.;../putty-ng;../library/ui_gfx;../library;../library/third_party/skia/include/core;../library/third_party/skia/include/config;../library/third_party/skia/include/effects;../library/third_party/skia/include/ports;../library/third_party/skia/include/utils;../library/third_party/skia/src/core;../putty/charset;../putty/windows;../putty/;../vendor/boost;../vendor/framework-nd/DesignPattern/include;../vendor/framework-nd/Fsm/include;../vendor/framework-nd/Log/include;../vendor/framework-nd/Net/include;../vendor/framework-nd/Utility/include;../vendor/framework-nd;..\vendor\libevent\WIN32-Code\nmake;../vendor/libevent/include;../vendor/dirent/include;../vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;../putty-ng;../library/ui_gfx;../library;../library/third_party/skia/include/core;../library/third_party/skia/include/config;../library/third_party/skia/include/effects;../library/third_party/skia/include/ports;../library/third_party/skia/include/utils;../library/third_party/skia/src/core;../putty/charset;../putty/windows;../putty/extend;../putty/;../vendor/boost;../vendor/framework-nd/DesignPattern/include;../vendor/framework-nd/Fsm/include;../vendor/framework-nd/Log/include;../vendor/framework-nd/Net/include;../vendor/framework-nd/Utility/include;../vendor/framework-nd;..\vendor\libevent\WIN32-Code\nmake;../vendor/libevent/include;../vendor/dirent/include;../vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;WINVER=0x0600;_WIN32_WINNT=0x0600;NOMINMAX;SECURITY_WIN32;_CRT_SECURE_NO_WARNINGS;WIN32_LEAN_AND_MEAN;WINNT;DEBUG;WIN32S_COMPAT;PSWD="n0o614";_NO_OLDNAMES;NO_MULTIMON;NO_HTMLHELP;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -125,7 +125,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>.;../putty-ng;../library/ui_gfx;../library;../library/third_party/skia/include/core;../library/third_party/skia/include/config;../library/third_party/skia/include/effects;../library/third_party/skia/include/ports;../library/third_party/skia/include/utils;../library/third_party/skia/src/core;../putty/charset;../putty/windows;../putty/;../vendor/boost;../vendor/framework-nd/DesignPattern/include;../vendor/framework-nd/Fsm/include;../vendor/framework-nd/Log/include;../vendor/framework-nd/Net/include;../vendor/framework-nd/Utility/include;../vendor/framework-nd;..\vendor\libevent\WIN32-Code\nmake;../vendor/libevent/include;../vendor/dirent/include;../vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;../putty-ng;../library/ui_gfx;../library;../library/third_party/skia/include/core;../library/third_party/skia/include/config;../library/third_party/skia/include/effects;../library/third_party/skia/include/ports;../library/third_party/skia/include/utils;../library/third_party/skia/src/core;../putty/charset;../putty/windows;../putty/extend;../putty/;../vendor/boost;../vendor/framework-nd/DesignPattern/include;../vendor/framework-nd/Fsm/include;../vendor/framework-nd/Log/include;../vendor/framework-nd/Net/include;../vendor/framework-nd/Utility/include;../vendor/framework-nd;..\vendor\libevent\WIN32-Code\nmake;../vendor/libevent/include;../vendor/dirent/include;../vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>NDEBUG;WIN32;_WINDOWS;WINVER=0x0600;_WIN32_WINNT=0x0600;NOMINMAX;SECURITY_WIN32;_CRT_SECURE_NO_WARNINGS;WIN32_LEAN_AND_MEAN;WINNT;DEBUG;WIN32S_COMPAT;PSWD="n0o614";_NO_OLDNAMES;NO_MULTIMON;NO_HTMLHELP;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
@@ -144,7 +144,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>.;../putty-ng;../library/ui_gfx;../library;../library/third_party/skia/include/core;../library/third_party/skia/include/config;../library/third_party/skia/include/effects;../library/third_party/skia/include/ports;../library/third_party/skia/include/utils;../library/third_party/skia/src/core;../putty/charset;../putty/windows;../putty/;../vendor/boost;../vendor/framework-nd/DesignPattern/include;../vendor/framework-nd/Fsm/include;../vendor/framework-nd/Log/include;../vendor/framework-nd/Net/include;../vendor/framework-nd/Utility/include;../vendor/framework-nd;..\vendor\libevent\WIN32-Code\nmake;../vendor/libevent/include;../vendor/dirent/include;../vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;../putty-ng;../library/ui_gfx;../library;../library/third_party/skia/include/core;../library/third_party/skia/include/config;../library/third_party/skia/include/effects;../library/third_party/skia/include/ports;../library/third_party/skia/include/utils;../library/third_party/skia/src/core;../putty/charset;../putty/windows;../putty/extend;../putty/;../vendor/boost;../vendor/framework-nd/DesignPattern/include;../vendor/framework-nd/Fsm/include;../vendor/framework-nd/Log/include;../vendor/framework-nd/Net/include;../vendor/framework-nd/Utility/include;../vendor/framework-nd;..\vendor\libevent\WIN32-Code\nmake;../vendor/libevent/include;../vendor/dirent/include;../vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>NDEBUG;WIN32;_WINDOWS;WINVER=0x0600;_WIN32_WINNT=0x0600;NOMINMAX;SECURITY_WIN32;_CRT_SECURE_NO_WARNINGS;WIN32_LEAN_AND_MEAN;WINNT;DEBUG;WIN32S_COMPAT;PSWD="n0o614";_NO_OLDNAMES;NO_MULTIMON;NO_HTMLHELP;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
@@ -158,7 +158,6 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="encoding_util.h" />
     <ClInclude Include="zmodem.h" />
     <ClInclude Include="zmodem_session.h" />
     <ClInclude Include="CmdLineHandler.h" />
@@ -175,7 +174,6 @@
     <ClInclude Include="zmodem_file.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="encoding_util.cpp" />
     <ClCompile Include="zmodem_session.cpp" />
     <ClCompile Include="CmdLineHandler.cpp" />
     <ClCompile Include="native_putty_common.cpp" />
